--- a/BlockDiagrams/impendance_control.tex
+++ b/BlockDiagrams/impendance_control.tex
@@ -31,7 +31,8 @@
 \node [block, right of=jinv] (B) {$\hat{\mathbf{B}}(\textbf{q})$};
 \node [sum, right of=B] (sum2) {};
 \node [block, below of=sum2] (n) {$\hat{\mathbf{n}}(\textbf{q},\mathbf{\dot{q}})$};
-
+\node [block, above = 0.5 of sum2] (jt) {$ \textbf{J}^T $};
+\node [support, above = 0.5 of jt](supjt) {}; 
 \node [block, right of=sum2, minimum width=2cm,minimum height=2cm] (pa10) {PA-10};
 
 \node [output, right of=pa10] (output) {};
@@ -67,7 +68,8 @@
 
 
 %\draw [->] (outputq) -- +(0,-4) -| node[pos=0.99, left]{\tiny {$-$}} (sumq);
-\draw [->] (outputhe) |- ($(sumall) + (3/2,1.3)$) -- node[pos=0.99, right]{\tiny {$+$}}(sumall);
+\draw [->] (outputhe) |- ($(supjt.0)+(-6,0)$) -- node[pos=0.99, right]{\tiny {$+$}}(sumall);
+\draw [->] (supjt)  -- (jt) -- node[pos=0.99, left]{\tiny {$+$}}(sum2);
 %\draw [->] ($(sumall) + (1/2,1.3)$) -- (sumall);
 \draw [->] (outputq) |- (gmod);
 \draw [->] (gmod) -| node[pos=0.99, left]{\tiny {$-$}} (sumq);
